--- a/zink-java/build.gradle
+++ b/zink-java/build.gradle
@@ -10,6 +10,14 @@ repositories {
 }
 
 dependencies {
+    implementation("com.j2html:j2html:1.6.0")
+    implementation group: 'org.mongodb', name: 'bson', version: '4.11.1'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.44.1.0'
+    implementation("com.google.code.gson:gson:2.13.1")
+    implementation("io.javalin.community.ssl:ssl-plugin:6.6.0")
+    implementation("org.slf4j:slf4j-simple:2.0.16")
+    implementation 'io.javalin:javalin:6.6.0'
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
